<resources>
    <string name="app_name">RestaurantBrowser</string>
    <string name="restaurant_activity_title">Inspections</string>
    <string name="inspection_activity_title">Violations</string>
    <string name="filter_activity_title">Filter</string>
    <string name="maps_activity_title">RestaurantBrowser Map View</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="data_update_title">Update Data</string>
    <string name="data_update_message">There is new data available. Do you want to download?</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="restaurant_name">%1$s</string>
    <string name="hazard_level">%1$s Hazard Level</string>
    <string name="num_issues">%1$d Issues Found</string>
    <string name="no_inspection_info">No Inspection Information</string>
    <string name="txtAddress">Address:</string>
    <string name="txtCoordinates">GPS:</string>
    <string name="address">%1$s</string>
    <string name="coordinates">%1$.8f, %2$.8f</string>
    <string name="num_critical_issues">%1$d Critical Issues Found</string>
    <string name="num_non_critical_issues">%1$d Non-Critical Issues Found</string>
    <string name="txtTracking">Tracking Number: </string>
    <string name="txtInspectionDate">Inspection Date: </string>
    <string name="txtInspectionType">Inspection Type: </string>
    <string name="txtNumCriticalIssues"># Critical Issues: </string>
    <string name="txtNumNonCriticalIssues"># Non-Critical Issues: </string>
    <string name="txtHazardRating">Hazard Rating: </string>
    <string name="txtViolation">Violations: </string>
    <string name="txtViolationDetail">No Violations Found</string>
    <string name="title_activity_maps">Map</string>
    <string name="hintSearch">Enter Address, City or Zip code</string>
    <string name="location_error">Unable to get current location</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="favorite">Favorites</string>
    <string name="search_favorite">Search Favorites</string>
    <string name="hazard_filter_title">Hazard Level of most recent Inspections</string>
    <string name="low_hazard_filter">Low</string>
    <string name="moderate_hazard_filter">Moderate</string>
    <string name="high_hazard_filter">High</string>
    <string name="num_violation_filter">Number of Violations</string>
    <string name="min_num_violation">Min:</string>
    <string name="max_num_violation">Max:</string>
    <string name="upadte_btn">UPDATE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="clear_filter_btn">CLEAR FILTER</string>
    <string name="filter_pg_title">FILTER:</string>
    <string name="restaurant_update_title">New Inspections</string>
    <string name="no_new_inspection">No favourite restaurants with new inspection</string>

</resources>
